--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="decrement-btn" onclick="decrement()">DECREMENT</button>
     <br>
     <button id="save-btn" onclick="save()">SAVE</button>
+    <button id="reset-btn" onclick="reset()">RESET</button>
     <p id="save-el">Previous entries: </p>
     <script src="index.js"></script>
 </body>
